// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainNavigation Should render correctly 1`] = `
.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  cursor: pointer;
}

.c0 {
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  width: 50px;
  height: 50px;
  padding: 5px;
  position: fixed;
  top: 20px;
  right: 40px;
  border-radius: 50%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: block;
  background: #fff;
  width: 40px;
  height: 3px;
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c1::before,
.c1::after {
  background: #fff;
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c1::before {
  top: -12px;
}

.c1::after {
  bottom: -12px;
}

.c2 {
  visibility: hidden;
  opacity: 0;
  list-style: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0 auto;
  height: 0;
}

.c3 {
  display: block;
  text-align: center;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  position: relative;
}

.c4::after {
  display: block;
  width: 100%;
  height: 2px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  background-color: #fff;
  content: '';
}

.c4:hover::after {
  width: 100%;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  position: relative;
}

.c5::after {
  display: block;
  width: 0;
  height: 2px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  background-color: #fff;
  content: '';
}

.c5:hover::after {
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    display: none;
  }
}

@media (min-width:768px) {
  .c2 {
    max-width: 1200px;
    width: auto;
    height: auto;
    display: block;
    visibility: visible;
    opacity: 1;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline-block;
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-bottom: 5px;
  }
}

@media (max-width:768px) {
  .c4::after {
    margin-top: 5px;
  }
}

@media (max-width:768px) {
  .c5::after {
    margin-top: 5px;
  }
}

<div>
  <nav
    class=""
  >
    <button
      class="c0"
      title="Menu"
      type="button"
    >
      <span
        class="c1"
      />
    </button>
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <a
          href="/"
        >
          <span
            class="c4"
          >
            Home
          </span>
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          href="/blog"
        >
          <span
            class="c5"
          >
            Blog
          </span>
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          href="/about-me"
        >
          <span
            class="c5"
          >
            Sobre mim
          </span>
        </a>
      </li>
      <li
        class="c3"
      >
        <button
          class="c6"
          type="button"
        >
          <img
            alt="Active language pt-BR"
            data-nimg="1"
            decoding="async"
            height="22"
            loading="lazy"
            src="/_next/image?url=%2Fimg%2Fpt-BR.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg%2Fpt-BR.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg%2Fpt-BR.jpg&w=64&q=75 2x"
            style="color: transparent; max-width: 100%; height: auto;"
            width="29"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`MainNavigation Should render correctly in en 1`] = `
.c6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  background: none;
  cursor: pointer;
}

.c0 {
  background: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  width: 50px;
  height: 50px;
  padding: 5px;
  position: fixed;
  top: 20px;
  right: 40px;
  border-radius: 50%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  position: relative;
  display: block;
  background: #fff;
  width: 40px;
  height: 3px;
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c1::before,
.c1::after {
  background: #fff;
  content: '';
  display: block;
  width: 100%;
  height: 100%;
  position: absolute;
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c1::before {
  top: -12px;
}

.c1::after {
  bottom: -12px;
}

.c2 {
  visibility: hidden;
  opacity: 0;
  list-style: none;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  margin: 0 auto;
  height: 0;
}

.c3 {
  display: block;
  text-align: center;
}

.c4 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  position: relative;
}

.c4::after {
  display: block;
  width: 100%;
  height: 2px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  background-color: #fff;
  content: '';
}

.c4:hover::after {
  width: 100%;
}

.c5 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  font-weight: 700;
  font-size: 20px;
  position: relative;
}

.c5::after {
  display: block;
  width: 0;
  height: 2px;
  -webkit-transition: width 0.3s ease-in-out;
  transition: width 0.3s ease-in-out;
  background-color: #fff;
  content: '';
}

.c5:hover::after {
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    display: none;
  }
}

@media (min-width:768px) {
  .c2 {
    max-width: 1200px;
    width: auto;
    height: auto;
    display: block;
    visibility: visible;
    opacity: 1;
  }
}

@media (min-width:768px) {
  .c3 {
    display: inline-block;
    padding: 0 20px;
  }
}

@media (max-width:768px) {
  .c3 {
    margin-bottom: 5px;
  }
}

@media (max-width:768px) {
  .c4::after {
    margin-top: 5px;
  }
}

@media (max-width:768px) {
  .c5::after {
    margin-top: 5px;
  }
}

<div>
  <nav
    class=""
  >
    <button
      class="c0"
      title="Menu"
      type="button"
    >
      <span
        class="c1"
      />
    </button>
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <a
          href="/"
        >
          <span
            class="c4"
          >
            Home
          </span>
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          href="/blog"
        >
          <span
            class="c5"
          >
            Blog
          </span>
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          href="/about-me"
        >
          <span
            class="c5"
          >
            About me
          </span>
        </a>
      </li>
      <li
        class="c3"
      >
        <button
          class="c6"
          type="button"
        >
          <img
            alt="Active language en"
            data-nimg="1"
            decoding="async"
            height="22"
            loading="lazy"
            src="/_next/image?url=%2Fimg%2Fen.jpg&w=64&q=75"
            srcset="/_next/image?url=%2Fimg%2Fen.jpg&w=32&q=75 1x, /_next/image?url=%2Fimg%2Fen.jpg&w=64&q=75 2x"
            style="color: transparent; max-width: 100%; height: auto;"
            width="29"
          />
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
